# development-tools

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  Trunk.toml  index.html  input.css  package-lock.json  package.json  rustfmt.toml  tailwind.config.js  tsconfig.json  vite.config.ts
.cargo/: audit.toml
.docs/: requirements.md
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  requirements.md
docs/00_,memo/: 20251202_01_memo.md
docs/02_research/2025_12/: 20251202_tauri_drag_and_drop.md
docs/02_research/2026_04/: 20260425_github_integration_audit.md
docs/03_plans/issue-management/: 20251201_implementation_plan.md
docs/03_plans/level-system/: 20251126_implementation_plan.md
docs/03_plans/ui-components-migration/: 20251206_01_phase3-1-basic-ui-components-plan.md  20251206_02_phase3-2-medium-priority-components-plan.md  20251206_03_phase3-3-low-priority-components-plan.md  20251206_04_phase4-feature-components-plan.md  20251206_05_phase5-leptos-removal-plan.md
docs/api/: AUTH_LIFECYCLE.md  TAURI_COMMANDS.md
docs/database/: SCHEMA.md
docs/prd/: home-gamification.md  mock-server.md  settings-page.md
docs/security/: NPM_SUPPLY_CHAIN_PROTECTION.md  SECURE_PACKAGE_INSTALL.md  VERSION_PINNING.md
scripts/: setup-hooks.sh
src/: App.tsx  app.rs  main.rs  main.tsx  tauri_api.rs  types.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/auth/: crypto.rs  keystore.rs  keystore.spec.md  mod.rs  oauth.rs  session.rs  token.rs
src-tauri/src/commands/: activity.rs  auth.rs  cache_fallback.spec.md  challenge.rs  gamification.rs  github.rs  issues.rs  mock_server.rs  mod.rs  my_open_work.spec.md  notifications.rs  repository_archive.spec.md  scheduler.rs  settings.rs  tool_loader.rs  tool_runner.rs
src-tauri/src/database/: challenge.rs  challenge.spec.md  connection.rs  migrations.rs  mod.rs  models.rs  repository.rs
src-tauri/src/database/models/: badge.rs  badge.spec.md  cache.rs  challenge.rs  code_stats.rs  github_stats_snapshot.rs  github_stats_snapshot.spec.md  level.rs  mod.rs  project.rs  settings.rs  streak.rs  user.rs  xp.rs  xp.spec.md
src-tauri/src/database/repository/: badge.rs  cache.rs  challenge.rs  code_stats.rs  github_stats_snapshot.rs  mod.rs  settings.rs  tests.rs  user.rs  user_stats.rs  xp_history.rs
src-tauri/src/github/: client.rs  issues.rs  mod.rs  notifications.rs  search_rate_limiter.rs  types.rs
src-tauri/src/mock_server/: mod.rs  repository.rs  server.rs  types.rs
src-tauri/src/sync_scheduler/: actions.rs  mod.rs  runner.rs  state.rs  sync_scheduler.spec.md
src-tauri/src/utils/: mod.rs  notifications.rs  numeric.rs
src/components/: animated_emoji.rs  animated_emoji.spec.md  animation_context.rs  confirm_dialog.rs  dropdown_menu.rs  dropdown_menu.spec.md  icons.rs  log_viewer.rs  mod.rs  network_status.rs  network_status.spec.md  option_form.rs  result_view.rs  sidebar.rs  tool_detail.rs
src/components/features/: FEATURES.md  mod.rs
src/components/home/: badge_grid.rs  cache_management.spec.md  challenge_card.rs  contribution_graph.rs  login_card.rs  mod.rs  offline_ui.spec.md  profile_card.rs  skeleton.rs  stats_display.rs  xp_history.rs  xp_history.spec.md  xp_notification.rs
src/components/icons/: Icon.tsx  index.ts
src/components/issues/: create_issue_modal.rs  issue_card.rs  issue_detail_modal.rs  kanban_board.rs  link_repository_modal.rs  mod.rs  project_dashboard.rs  projects_page.rs
src/components/layouts/: index.ts
src/components/mock_server/: mock_server_page.rs  mod.rs
src/components/pages/: home_page.rs  mock_server_page.rs  mod.rs  project_dashboard_page.rs  projects_page.rs  settings_page.rs  shared_loading.rs  shared_utils.rs
src/components/settings/: account_settings.rs  app_info.rs  appearance_settings.rs  data_management.rs  mod.rs  notification_settings.rs  settings_page.rs  settings_reset.rs  sync_settings.rs  toast.rs  toggle_switch.rs
src/components/skeleton/: base.rs  mod.rs  variants.rs
src/components/ui/: mod.rs
src/contexts/: animation_context.rs  mod.rs  network_context.rs
src/hooks/: mod.rs  useCachedFetch.ts  useToast.ts  use_animation.rs  use_network_status.rs  use_toast.rs
src/lib/: navigation.ts
src/lib/tauri/: commands.ts  events.ts  index.ts
src/pages/Home/: CacheStatusBanner.tsx  Home.tsx
src/pages/Issues/: InboxFilters.tsx  InboxItemRow.tsx  Issues.tsx  PrProgressPanel.tsx  index.tsx
src/pages/MockServer/: MockServer.tsx  index.tsx
src/pages/NotFound/: NotFound.tsx
src/pages/Pomodoro/: index.tsx  (+1 more)
src/stores/: animationStore.ts  authStore.ts  index.ts  navigationStore.ts  networkStore.ts  notificationsStore.ts  sessionStore.ts  settingsStore.ts
src/types/: activity.ts  auth.rs  auth.ts  challenge.rs  challenge.ts  gamification.rs  gamification.ts  index.ts  issue.rs  issue.ts  mock-server.ts  mock_server.rs  mod.rs  network.rs  network.ts  notifications.ts  session.ts  settings.rs  settings.ts  tool.rs  tool.ts  ui.ts
src/utils/: markdown.rs  mod.rs
tools/large-file-finder/: Cargo.toml  README.md  tool.json
tools/large-file-finder/src/: cli.rs  config.rs  counter.rs  main.rs  output.rs  presets.rs  scanner.rs  types.rs
tools/loc-counter/: .gitignore  Cargo.toml  README.md  tool.json
tools/loc-counter/src/: cli.rs  counter.rs  language.rs  main.rs  output.rs  scanner.rs  types.rs
tools/port-scanner/: Cargo.toml  README.md  tool.json
tools/port-scanner/src/: cli.rs  main.rs  output.rs  port_scanner.spec.md  scanner.rs  types.rs
tools/shai-hulud-scanner/: Cargo.toml  README.md  tool.json
tools/shai-hulud-scanner/src/: additional_scanner.rs  cli.rs  csv_loader.rs  detector.rs  extension_scanner.rs  global_scanner.rs  main.rs  output.rs  parsers.rs  scanner.rs  suspicious.rs  types.rs
tools/todo-collector/: Cargo.toml  README.md  tool.json
tools/todo-collector/src/: cli.rs  detector.rs  main.rs  output.rs  scanner.rs  types.rs
(+179 files in other folders)
