[package]
name = "development-tools-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.8", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", 
    "Window", 
    "Navigator", 
    "Clipboard",
    "Document",
    "Element",
    "HtmlAnchorElement",
    "HtmlInputElement",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
gloo-timers = "0.3"
futures = "0.3"

[workspace]
members = ["src-tauri"]
exclude = ["tools/loc-counter", "tools/shai-hulud-scanner", "tools/todo-collector", "tools/large-file-finder", "tools/port-scanner"]
