[package]
name = "development-tools"
version = "0.1.0"
description = "GUI wrapper for CLI development tools"
authors = ["sugaiakimasa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "development_tools_lib"
# WASMビルド用の設定（Trunk移行時に削除予定）
# crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
chrono = "0.4"
rustc_version = "0.4"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }

# HTTP Client for GitHub API
reqwest = { version = "0.12", features = ["json"] }

# HTTP Server for Mock Server
axum = "0.8"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
mime_guess = "2"

# Error handling
thiserror = "2"
anyhow = "1"

# Security (for token encryption)
aes-gcm = "0.10"
rand = "0.9"
base64 = "0.22"

# Async utilities
futures = "0.3"

# URL encoding
urlencoding = "2"

# Environment variables
dotenvy = "0.15"

# Tracing
tracing = "0.1"

[dev-dependencies]
tempfile = "3.23.0"
tokio-test = "0.4"

