[package]
name = "loc-counter"
version = "1.0.0"
edition = "2021"
description = "Count lines of code by language with code/comment/blank line statistics"
authors = ["otomatty"]

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
anyhow = "1"
glob = "0.3"

[[bin]]
name = "loc-counter"
path = "src/main.rs"

[workspace]

[dev-dependencies]
tempfile = "3"
