[package]
name = "port-scanner"
version = "1.0.0"
edition = "2021"
description = "Scan local ports and show which processes are using them"
authors = ["otomatty"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
anyhow = "1"
regex = "1"

[[bin]]
name = "port-scanner"
path = "src/main.rs"

[workspace]

[dev-dependencies]
