[package]
name = "shai-hulud-scanner"
version = "0.1.0"
edition = "2021"
description = "A security tool to detect npm packages affected by the Shai-Hulud supply chain attack"
authors = ["For All Learners Team"]

[dependencies]
# CSV parsing
csv = "1.3"

# HTTP client for downloading CSV from GitHub
reqwest = { version = "0.12", features = ["blocking"] }

# JSON parsing for package.json and package-lock.json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File system traversal
walkdir = "2.5"

# Command line argument parsing
clap = { version = "4.5", features = ["derive"] }

# Version comparison
semver = "1.0"

# Colored terminal output
colored = "3.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Regex for version parsing
regex = "1.11"

# Directory paths
dirs-next = "2.0"

[profile.release]
opt-level = 3
lto = true
