[package]
name = "todo-collector"
version = "1.0.0"
edition = "2021"
description = "Collect and list TODO/FIXME/HACK comments from codebase"
authors = ["otomatty"]

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2"
anyhow = "1"

[[bin]]
name = "todo-collector"
path = "src/main.rs"

[workspace]

